--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   country_code_picker: ^2.0.2
   flutter_localizations:
     sdk: flutter
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
